Caution_Issue1
Let's install Module about "pymysql", "openpyxl", "JAVA", "JPYPE", "konlpy"

#Install via terminal(cmd mode)_Admin mode (cmd + Ctrl + Shift)
1. Install pymysql - pip install pymysql before making create_train_data_table.py file
2. Install openpyxl - pip install openpyxl before making load_train_data.py file

# caution : Download JAVA
	    Install JPype
	    Install konlpy
	    
3. Install JPYPE - pip install JPype1‑1.2.0‑cp39‑cp39‑win_amd64.whl
**caution : D:/Java = D:/Python (Drive Storage consistency)
	    Upgrade pip before Uninstall JPype1
	    pip install JPype1
4. Install konlpy - pip install konlpy



- issue 1
#When trying to import smth from config.py file, failed

>>> import openpyxl
>>> from config.DatabaseConfig import *
Traceback (most recent call last):
  File "<pyshell#2>", line 1, in <module>
    from config.DatabaseConfig import *
ModuleNotFoundError: No module named 'config.DatabaseConfig'; 'config' is not a package

>>> import pymysql
>>> from Scripts.chatbot.config.DatabaseConfig import *
Traceback (most recent call last):
  File "<pyshell#24>", line 1, in <module>
    from Scripts.chatbot.config.DatabaseConfig import *
  File "C:\Python\Python39\Scripts\chatbot\config\DatabaseConfig.py", line 1
    Python 3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)] on win32
           ^
SyntaxError: invalid syntax


- solution
# you don't need any words in '__init__.py'
the dir won't reckon package dir, To reckon Python Directory, needed '__init__.py' file in the folder.

# Before beginning Module, write the code down inward import
import pymysql
path.append(pymysql.path.dirname(pymysql.path.abspath(pymysql.path.dirname(__file__))) )

# System Setting > Environment Variable Edit "Python_Path" to Project addr



	


	


